[package]
name = "dogehouse-rs"
documentation = "https://docs.rs/dogehouse-rs/"
version = "0.1.22"
edition = "2018"
authors = ["William Lane <williamlane923@gmail.com>"]
description = "A library for dogehouse written in rust"
license = "MIT"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
dotenv = "0.15.0"
futures = "0.3.14"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
url = "2.2.1"
uuid = { version = "0.8.2", features = ["v4"] }
websocket = "0.26.2"
